-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.3
-
-
7e678acbb (dev), c8a95333e (6.6), 5ccf82b36 (tqtc/lts-6.5)
User reported that placeholder text does not align to the right when it has been set via:
horizontalAlignment: Text.AlignRight
Testing this without setting any style works correctly.
Once "Material" style is set then the placeholder text does not follow the alignment setting.
Please see the example picture and project.
- relates to
-
QTBUG-117654 TextArea multi-line placeholder text overlaps the TextEdit area
-
- Closed
-
For Gerrit Dashboard: QTBUG-118856 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
516801,9 | Material: respect horizontalAlignment in placeholder text | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
517666,2 | Material: respect horizontalAlignment in placeholder text | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
517676,2 | Material: respect horizontalAlignment in placeholder text | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |