src/quickcontrols/material/impl/qquickmaterialplaceholdertext.cpp
@@ -29,8 +29,8 @@ Q_GLOBAL_STATIC(QEasingCurve, animationEasingCurve, QEasingCurve::OutSine);
 QQuickMaterialPlaceholderText::QQuickMaterialPlaceholderText(QQuickItem *parent)
     : QQuickPlaceholderText(parent)
 {
-    // Ensure that scaling happens on the left side, at the vertical center.
-    setTransformOrigin(QQuickItem::Left);
+    connect(this, &QQuickMaterialPlaceholderText::effectiveHorizontalAlignmentChanged,
+            this, &QQuickMaterialPlaceholderText::adjustTransformOrigin);
 }
 
 bool QQuickMaterialPlaceholderText::isFilled() const
@@ -212,6 +212,23 @@ void QQuickMaterialPlaceholderText::setVerticalPadding(qreal verticalPadding)
     emit verticalPaddingChanged();
 }
 
+void QQuickMaterialPlaceholderText::adjustTransformOrigin()
+{
+    switch (effectiveHAlign()) {
+    case QQuickText::AlignLeft:
+        Q_FALLTHROUGH();
+    case QQuickText::AlignJustify:
+        setTransformOrigin(QQuickItem::Left);
+        break;
+    case QQuickText::AlignRight:
+        setTransformOrigin(QQuickItem::Right);
+        break;
+    case QQuickText::AlignHCenter:
+        setTransformOrigin(QQuickItem::Center);
+        break;
+    }
+}
+
 void QQuickMaterialPlaceholderText::controlGotActiveFocus()
 {
     if (m_focusOutAnimation)
@@ -275,9 +292,9 @@ void QQuickMaterialPlaceholderText::maybeSetFocusAnimationProgress()
 
 void QQuickMaterialPlaceholderText::componentComplete()
 {
-    // We deliberately do not call QQuickPlaceholderText's implementation here,
-    // as Material 3 placeholder text should always be left-aligned.
-    QQuickText::componentComplete();
+    QQuickPlaceholderText::componentComplete();
+
+    adjustTransformOrigin();
 
     m_largestHeight = implicitHeight();
     if (m_largestHeight > 0) {
