src/quickcontrols/material/TextArea.qml
@@ -73,6 +73,7 @@ T.TextArea {
         // When the control's size is set larger than its implicit size, use whatever size is smaller
         // so that the gap isn't too big.
         placeholderTextWidth: Math.min(placeholder.width, placeholder.implicitWidth) * placeholder.scale
+        placeholderTextHAlign: control.effectiveHorizontalAlignment
         controlHasActiveFocus: control.activeFocus
         controlHasText: control.length > 0
         placeholderHasText: placeholder.text.length > 0
